--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -15,8 +15,6 @@
   display: flex;
   flex-direction: column;
   gap: 15px; /* Space between icons */
-  display: flex;
-  flex-direction: column;
   justify-content: center;
 }
 
@@ -31,7 +29,7 @@
   font-size: 26px; /* Slight increase in size on hover */
 }
 
-.name-head{
+.name-head {
   margin-bottom: 0;
 }
 
@@ -50,7 +48,7 @@
   justify-content: center;
 }
 
-.learn-txt{
+.learn-txt {
   color: green;
   font-size: 1.1em;
 }
@@ -65,13 +63,19 @@
   max-width: 100%;
   height: 400px;
   border-radius: 10px;
+  transition: box-shadow 0.3s ease, transform 0.2s ease;
+}
+
+.image-content img:hover {
+  transform: scale(1.01);
+  transform: translateX(-2px);
+  box-shadow: -6px 15px 30px rgba(0, 0, 0, 0.4);
 }
 
 .hero-btn {
   display: inline-block;
   padding: 14px 16px;
   width: 200px;
-  /* margin: 10px; */
   background-color: #007bff;
   color: white;
   border: none;
@@ -92,4 +96,10 @@
   margin-top: 0;
   margin-bottom: 0;
   line-height: 1;
+}
+
+/* Hover effect for XIcon */
+.social-icons a:hover .social-logo {
+  transform: scale(1.1); /* Slightly increase size on hover */
+  transition: transform 0.3s ease; /* Smooth transition for size change */
 }
