--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -2,6 +2,11 @@
   text-align: center;
   padding: 20px;
 }
+.project:hover{
+  transform: scale(1.01);
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.4);
+  transform: translateY(-5px);
+}
 
 .projects h2 {
   font-size: 2em;
