--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -2,43 +2,79 @@
   text-align: center;
   margin-top: 90px;
 }
-.about-head{
+
+.about-head {
   margin-bottom: 0;
 }
+
 .about-content {
-  display: flex; /* Use flexbox for layout */
-  align-items: flex-start; /* Align items at the top */
-  justify-content: center; /* Center items horizontally */
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
   padding-top: 30px;
-  flex-wrap: wrap; /* Allow wrapping if necessary */
+  flex-wrap: wrap;
 }
-.s{
+
+.s {
   display: block;
   font-size: 15px;
   margin-bottom: 3rem;
 }
+
 .about-image {
   width: 300px;
-  height: 400px;
+  height: auto;
+  max-width: 100%;
   margin-right: 20px;
   border-radius: 10px;
-  transition: box-shadow 0.3s ease, transform 0.3s ease; /* Smooth transition for shadow and movement */
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
 .about-image:hover {
   box-shadow: 6px 15px 30px rgba(0, 0, 0, 0.4);
   transform: scale(1.01);
 }
+
 .text-content {
-  max-width: 410px; /* Limit text content width */
-  margin: 0; /* Remove margin */
+  max-width: 410px;
+  margin: 0;
   padding: 25px;
-  display: flex; /* Use flexbox for vertical alignment */
-  flex-direction: column; /* Stack elements vertically */
-  justify-content: flex-start; /* Align to the start */
-  text-align: left; /* Align text to the left */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  text-align: left;
 }
 
 .text-content h5 {
-  margin-bottom: 10px; /* Space below the h5 tag */
+  margin-bottom: 10px;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .about-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-image {
+    width: 80%; /* Adjust the width for smaller screens */
+    margin: 0 auto 20px auto; /* Center image with margin below */
+  }
+
+  .text-content {
+    padding: 0 15px; /* Add padding for smaller screens */
+    text-align: center; /* Center text on smaller screens */
+  }
+}
+
+@media (max-width: 480px) {
+  .about-image {
+    width: 100%; /* Full width for very small screens */
+    max-width: 300px; /* Limit max width */
+    height: auto;
+  }
+
+  .text-content {
+    padding: 0 10px; /* Reduce padding for extra-small screens */
+  }
 }
