--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -26,6 +26,7 @@
   height: auto;
   max-width: 100%;
   margin-right: 20px;
+  margin-top: 45px;
   border-radius: 10px;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
